--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "build": "npm run build"
+    "build": "npm build"
   },
   "author": "Dmitry Shibanov",
   "license": "ISC"
